Added example appsettings.json

--- a/TurfManager/appsettings.Development.json
+++ b/TurfManager/appsettings.Development.json
@@ -5,5 +5,16 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GDDDatabase": "Server=[DBSERVER].database.windows.net;Database=[DBUSER];User ID=[DBNAME];Password=[DBPASS];Encrypt=True;TrustServerCertificate=False"
+  },
+
+  "Jwt": {
+    "Key": "longsecretpassphrase",
+    "Issuer": "TemperatureAuthenticationServer",
+    "Audience": "TemperatureServiceClient",
+    "Subject": "TemperatureServiceAccessToken"
   }
 }
