--- a/TurfManager/appsettings.Development.json
+++ b/TurfManager/appsettings.Development.json
@@ -8,11 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GDDDatabase": "Server=[DBSERVER].database.windows.net;Database=[DBUSER];User ID=[DBNAME];Password=[DBPASS];Encrypt=True;TrustServerCertificate=False"
+    "GDDDatabase": "Server=sql1.local.maow.co;Database=GDD;User ID=gddtracker;Password=Gddapp123;Encrypt=True;TrustServerCertificate=True"
   },
 
   "Jwt": {
-    "Key": "longsecretpassphrase",
+    "Key": "Cl101b0036358dCl101b0036358d",
     "Issuer": "TemperatureAuthenticationServer",
     "Audience": "TemperatureServiceClient",
     "Subject": "TemperatureServiceAccessToken"
