Added API doco and database schema

--- a/TurfManager/appsettings.template.json
+++ b/TurfManager/appsettings.template.json
@@ -8,11 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GDDDatabase": "Server=192.168.5.194;Database=GDD;User ID=sa;Password=Password1;Encrypt=True;TrustServerCertificate=True"
+    "GDDDatabase": "Server=(SERVERNAME);Database=(DBNAME);User ID=(DBUSER);Password=(DBPASSWORD);Encrypt=True;TrustServerCertificate=False"
   },
 
   "Jwt": {
-    "Key": "Cl101b0036358dCl101b0036358d",
+    "Key": "dirtygreatbiglongstringforjwttogenerateagainst",
     "Issuer": "TemperatureAuthenticationServer",
     "Audience": "TemperatureServiceClient",
     "Subject": "TemperatureServiceAccessToken"
