--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /TurfManager/Properties/ServiceDependencies/TurfManager - Web Deploy1/profile.arm.json
+/TurfManager/appsettings.Development.template.json
