--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,11 +36,12 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 - task: PublishBuildArtifacts@1
+
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
     azureSubscription: 'MSDN Benefits(b688ce17-4a97-4ef3-95d5-855fedb728e0)'
     appType: 'webApp'
     WebAppName: 'TurfManager'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '$(build.artifactStagingDirectory)\WebApp.zip'
     JSONFiles: '**/appsettings.json'
