--- a/TurfManager/.vscode/launch.json
+++ b/TurfManager/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/TurfManager.dll",
+            "program": "${workspaceFolder}/bin/Debug/net8.0/TurfManager.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
