add action for config file

--- a/TurfManager/appsettings.template.json
+++ b/TurfManager/appsettings.template.json
@@ -12,7 +12,7 @@
   },
 
   "Jwt": {
-    "Key": "dirtygreatbiglongstringforjwttogenerateagainst",
+    "Key": "(JWTKEY)",
     "Issuer": "TemperatureAuthenticationServer",
     "Audience": "TemperatureServiceClient",
     "Subject": "TemperatureServiceAccessToken"
