--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,12 +3,9 @@ on:
   push:
     branches: 
       - master
-  
 jobs:
   build:
-
     runs-on: "self-hosted"
-
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
@@ -16,30 +13,30 @@ jobs:
       with:
         dotnet-version: 8.0.x
     # Match and replace 
-     - name: Find and Replace Server name
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: "(SERVERNAME)"
-          replace: ${{ secrets.SERVERNAME }}
-          include: 'appsettings.template.json'
-     - name: Find and Replace Server name
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: "(DBUSER)"
-          replace: ${{ secrets.DBUSER }}
-          include: 'appsettings.template.json'
-     - name: Find and Replace Server name
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: "(DBPASSWORD)"
-          replace: ${{ secrets.DBPASSWORD }}
-          include: 'appsettings.template.json'
-     - name: Find and Replace Server name
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: "(JWTKEY)"
-          replace: ${{ secrets.JWTKEY }}
-          include: 'appsettings.template.json'  
+    - name: "Find and Replace Server name"
+      uses: jacobtomlinson/gha-find-replace@v2
+      with:
+       find: "(SERVERNAME)"
+       replace: ${{ secrets.SERVERNAME }}
+       include: 'appsettings.template.json'
+    - name: "Find and Replace db user"
+      uses: jacobtomlinson/gha-find-replace@v2
+      with:
+        find: "(DBUSER)"
+        replace: ${{ secrets.DBUSER }}
+        include: 'appsettings.template.json'
+    - name: "Find and Replace db password"
+      uses: jacobtomlinson/gha-find-replace@v2
+      with:
+       find: "(DBPASSWORD)"
+       replace: ${{ secrets.DBPASSWORD }}
+       include: 'appsettings.template.json'
+    - name: "Find and Replace jwtkey"
+      uses: jacobtomlinson/gha-find-replace@v2
+      with:
+       find: "(JWTKEY)"
+       replace: ${{ secrets.JWTKEY }}
+       include: 'appsettings.template.json'  
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
