--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: .NET Build
+name: .NET Build Only
 on:
   push:
     branches: 
@@ -8,10 +8,6 @@ jobs:
     runs-on: "self-hosted"
     steps:
     - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
     # Match and replace 
     - name: "Find and Replace Server name"
       uses: jacobtomlinson/gha-find-replace@v2
