add docker build

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -50,4 +50,6 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Build docker image
+      run: "docker build ./TurfManager --file Dockerfile --tag turfmanager:$(date +%s)"
 
