--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,10 @@
             "args": [],
             "cwd": "${workspaceFolder}/TurfManager",
             "stopAtEntry": false,
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-            },
+            //"serverReadyAction": {
+            //    "action": "openExternally",
+            //    "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            //},
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
