--- a/TurfManager/Dockerfile
+++ b/TurfManager/Dockerfile
@@ -5,7 +5,7 @@ EXPOSE 5000
 ENV ASPNETCORE_URLS=http://+:5000
 
 USER app
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM --platform=linux/amd64 mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG configuration=Release
 WORKDIR /src
 COPY ["TurfManager/TurfManager.csproj", "TurfManager/"]
